Lab-13-blocked-traffic/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    app: frontend
spec:
  containers:
  - name: network-tester
    image: alpine
    command: ["sh", "-c", "sleep 3600"]
